--- a/forma za Losmija/panel.html
+++ b/forma za Losmija/panel.html
@@ -2,9 +2,10 @@
 <head>
 <title>DEMO PANEL</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 </head>
 <body>
-
+<div id=all>
 <div id="header">
 <div class="lista">
 <a href="#">File</a>
@@ -20,7 +21,7 @@
 </div>
 
 </div>
-<div id="content">
+<div id="wrapper">
 <div class="sidebar">
 <a href="#"><img src="css/img/1648.jpg"></a>
 <a href="#"><img src="css/img/2648.jpg"></a>
@@ -28,16 +29,16 @@
 <a href="#"><img src="css/img/4648.jpg"></a>
 <a href="#"><img src="css/img/5648.jpg"></a>
 
-
 </div>
+<div class="etc">
 <div class="area1">
-<h1> Results</h1>
+<p>Results</p>
 </div>
 <div class="area2">
-<h1> Budggets</h1>
+<p>Budggets</p>
 </div>
 <div class="area3">
-<h1> Levels</h1>
+<p>Levels</p>
 </div>
 <div>
 <table class="table">
@@ -75,7 +76,8 @@
 </tr>
 </table>
 </div>
-
+</div>
+</div>
 </div>
 </body>
 
