--- a/forma za Losmija/login.html
+++ b/forma za Losmija/login.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 </head>
 <body>
 <div id="header">
